# sort-it-now

./: .dockerignore  .env.example  .gitignore  CHANGELOG  COMPARISON.md  CONCEPT.md  Cargo.toml  DEMO.md  DOCKER_SETUP.md  Dockerfile  FEATURE_PROPOSALS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README-TYPESCRIPT.md  README.md  TYPESCRIPT-SUMMARY.md  docker-compose.yml  index.ts  package.json
.github/: FUNDING.yml  copilot-instructions.md  labeler.yml
.github/workflows/: codeql.yml  docker.yml  release.yml  rust.yml
scripts/: install-unix.sh  install-windows.ps1  install.ps1  install.sh  uninstall-windows.ps1  uninstall.sh
src/: api.rs  cli.rs  config.rs  geometry.rs  lib.rs  main.rs  model.rs  optimizer.rs  packaging.rs  types.rs  update.rs
tests/: api.rs
ts-src/: api.ts  config.ts  example.ts  geometry.ts  index.ts  model.ts  optimizer.ts
web/: i18n.js  index.html  script.js
web/i18n/: de.json  en.json
