[package]
name = "sort_it_now"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
tokio-stream = "0.1"
rust-embed = "8.0"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
semver = "1.0"
tempfile = "3.13"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
dotenvy = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
