[package]
name = "sort_it_now"
version = "1.1.1"
edition = "2024"
license = "LicenseRef-NCSL-1.0"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
futures = "0.3"
tokio-stream = "0.1"
rust-embed = "8.9.0"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
semver = "1.0"
tempfile = "3.23.0"
flate2 = "1.1.5"
tar = "0.4"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
sha2 = "0.10"
dotenvy = "0.15"
utoipa = { version = "5.4", features = ["axum_extras"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
